# ir_amplitude_detuning

./: .buildinfo  .zenodo.json  CHANGELOG.md  README.md  bibliography.doctree  bibliography.html  codeautolink-cache.json  correction_via_amplitude_detuning.py  data.json  examples.doctree  examples.html  genindex.html  index.doctree  index.html  objects.inv  pyproject.toml  redo_all_from_scratch.py  search.html  searchindex.js
.github/workflows/: coverage.yml  cron.yml  tests.yml
_modules/: index.html
_modules/examples/: commissioning_2022.html  md3311.html  md6863.html
_modules/ir_amplitude_detuning/: lhc_detuning_corrections.html
_modules/ir_amplitude_detuning/detuning/: calculations.html  equation_system.html  measurements.html  targets.html  terms.html
_modules/ir_amplitude_detuning/plotting/: correctors.html  detuning.html  utils.html
_modules/ir_amplitude_detuning/simulation/: lhc_simulation.html  results_loader.html
_modules/ir_amplitude_detuning/utilities/: common.html  correctors.html  latex.html  logging.html
_sources/: bibliography.rst.txt  examples.rst.txt
doc/: Makefile  bibliography.rst  conf.py  examples.rst  index.rst
doc/_static/css/: custom.css
doc/_templates/: layout.html
doc/modules/: detuning.rst  index.rst  main.rst  plotting.rst  simulation.rst  utilities.rst
examples/: 2018_md3311.py  2022_commissioning.py  2022_md6863.py  commissioning_2022.py  md3311.py  md6863.py  setup_2018.py  setup_commissioning_2022.py  setup_example_2018.py
examples/md6863_data/B1_1_-160_5_+160_AmpDet_H_b6_in/: bbq_ampdet.tfs
examples/md6863_data/B1_1_-160_5_+160_AmpDet_H_b6_out/: bbq_ampdet.tfs
examples/md6863_data/B1_1_-160_5_+160_AmpDet_V_b6_in/: bbq_ampdet.tfs
examples/md6863_data/B1_1_Off_5_+160_AmpDet_H_b6_out/: bbq_ampdet.tfs
examples/md6863_data/B1_1_Off_5_+160_AmpDet_V_b6_out/: bbq_ampdet.tfs
examples/md6863_data/B1_1_Off_5_-160_AmpDet_H_b6_out/: bbq_ampdet.tfs
examples/md6863_data/B1_1_Off_5_-160_AmpDet_V_b6_out/: bbq_ampdet.tfs
examples/md6863_data/B1_1_Off_5_Off_AmpDet_H_b6_out/: bbq_ampdet.tfs
examples/md6863_data/B1_1_Off_5_Off_AmpDet_V_b6_out/: bbq_ampdet.tfs
examples/md6863_data/B2_1_-160_5_+160_AmpDet_H_b6_in/: bbq_ampdet.tfs
examples/md6863_data/B2_1_-160_5_+160_AmpDet_H_b6_out/: bbq_ampdet.tfs
examples/md6863_data/B2_1_-160_5_+160_AmpDet_V_b6_in/: bbq_ampdet.tfs
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_16889170778718cc_lhc_simulation_py.html  z_16889170778718cc_results_loader_py.html  z_470142921575c047_correctors_py.html  z_470142921575c047_detuning_py.html  z_470142921575c047_utils_py.html  z_4f93f09f199ebfa2_common_py.html  z_4f93f09f199ebfa2_constants_py.html  z_4f93f09f199ebfa2_correctors_py.html  z_4f93f09f199ebfa2_latex_py.html  z_4f93f09f199ebfa2_logging_py.html  z_4f93f09f199ebfa2_measurement_analysis_py.html  z_714eac15f71a9411_commissioning_2022_py.html  z_714eac15f71a9411_md3311_py.html  z_714eac15f71a9411_md6863_py.html  z_784d595829668708_calculations_py.html  z_784d595829668708_equation_system_py.html  z_784d595829668708_measurements_py.html  z_784d595829668708_targets_py.html  z_784d595829668708_terms_py.html  z_e4772bba20f719d4___init___py.html  z_e4772bba20f719d4_lhc_detuning_corrections_py.html
ir_amplitude_detuning/: __init__.py  lhc_detuning_corrections.py  setup_template.py
ir_amplitude_detuning/detuning/: calculation.py  calculations.py  equation_system.py  measurements.py  targets.py  terms.py
ir_amplitude_detuning/plotting/: compare_measurements.py  correctors.py  detuning.py  utils.py
ir_amplitude_detuning/simulation/: common.py  lhc_simulation.py  results_loader.py
ir_amplitude_detuning/utilities/: classes_accelerator.py  classes_targets.py  common.py  constants.py  correctors.py  latex.py  logging.py  maths.py  measurement_analysis.py  misc.py
ir_dodecapole_corrections/: __init__.py  correction_via_amplitude_detuning.py  correction_via_amplitude_detuning_multi_xing.py  lhc_detuning_corrections.py  setup_template.py
ir_dodecapole_corrections/detuning/: calculation.py  equation_system.py  measurements.py  targets.py
ir_dodecapole_corrections/plotting/: compare_measurements.py  detuning.py
ir_dodecapole_corrections/simulation/: lhc_simulation.py
ir_dodecapole_corrections/utilities/: classes.py  classes_accelerator.py  classes_targets.py  detuning.py  latex.py  logging.py  maths.py
modules/: detuning.doctree  detuning.html  main.doctree  main.html  plotting.doctree  plotting.html  simulation.doctree  simulation.html  utilities.doctree  utilities.html
tests/: conftest.py
tests/examples/: test_examples.py
tests/inputs/measurement/: kick_ampdet_xy.tfs
tests/unit/: test_detuning.py  test_detuning_calculations.py  test_detuning_equation_system.py  test_detuning_measurements.py  test_detuning_targets.py  test_detuning_terms.py  test_equation_system.py  test_lhc_detuning_corrections.py  test_plotting_correctors.py  test_plotting_detuning.py  test_plotting_utils.py  test_simulation_lhc_simulation.py  test_simulation_results_loader.py  test_utilities_common.py  test_utilities_correctors.py  test_utilities_latex.py  test_utilities_logging.py  test_utilities_measurement_analysis.py
(+16 files in other folders)
